wrong  comment cmd

--- a/sections/onetimesig.tex
+++ b/sections/onetimesig.tex
@@ -225,7 +225,7 @@ Let $\varepsilon, \alpha_w$, $\alpha_H$, $\varphi$, $\gamma$, $\rho$, $\beta_\si
   It thus follows that with probability at least $1-2^\varepsilon$ the strong verification algorithm outputs $1$.
 \end{proof}
 
-\cmnt{TODO: continue from here}
+\nnote{TODO: continue from here}
 
 \begin{lemma}\label{lem:kots_homomorphic}
 Let $\alpha_H$, $\varphi$, $\gamma$, $\beta_\sigma,q,n,\secpar$ be positive integers.
