--- a/sections/onetimesig.tex
+++ b/sections/onetimesig.tex
@@ -138,7 +138,7 @@ The definition is further strengthened by allowing the adversary to produce forg
 
 \nnote{Describe how scheme is derived from the work of Boneh and Kim~\cite{BonKim2020}.}
 \begin{theorem}\label{theo:kots}
-Let $\varepsilon, \alpha_w$, $\alpha_H$, $\delta$, $\varphi$, $\gamma$, $\rho$, $\beta_\sigma$, $n$, $q$ be integers such that $q$ is prime and $q > 16\alpha_w\alpha_H\varphi$, $n$ is a power of two, $2^{2\secpar}\leq \tern_{\alpha_H} \leq 2^{2\secpar+\delta}$, $\beta_\sigma \geq 4\varphi\alpha_H\sqrt{\tfrac{1}{2}\alpha_w\rho(\varepsilon+1+\log_2n\gamma)\cdot\ln2}$, and $\gamma\geq((3\secpar+\delta)/n+\log_2q)\log^{-1}_2(\varphi+\tfrac{1}{2})$.
+Let $\secpar, \varepsilon, \alpha_w$, $\alpha_H$, $\delta$, $\varphi$, $\gamma$, $\rho$, $\beta_\sigma$, $n$, $q$ be integers such that $q$ is prime and $q > 16\alpha_w\alpha_H\varphi$, $n$ is a power of two, $2^{2\secpar}\leq \tern_{\alpha_H} \leq 2^{2\secpar+\delta}$, $\beta_\sigma \geq 4\varphi\alpha_H\sqrt{\tfrac{1}{2}\alpha_w\rho(\varepsilon+1+\log_2n\gamma)\cdot\ln2}$, and $\gamma\geq((3\secpar+\delta)/n+\log_2q)\log^{-1}_2(\varphi+\tfrac{1}{2})$.
 Let $H : \bin^* \to \tern_{\alpha_H}$ be a hash function.
 Let $W' = \{w_0-w_1\mid w_0,w_1\in\tern_{\alpha_w} \land w_0\neq w_1\}$.
 If the $\sis_{\ring,q,\gamma,2\beta_\sigma+4\alpha_w\alpha_H\varphi}$ problem is hard and $H$ is collision resistant, then the construction from~\autoref{fig:otsconstruction} is an individually correct, $(\rho,\tern_{\alpha_w},\varepsilon)$-probabilistically homomorphic, robustly homomorphic KOTS that is $W'$-multi-user existentially unforgeable under rerandomized keys.
@@ -150,13 +150,13 @@ The theorem follows from \autoref{lem:kots_ind_correct}, \autoref{lem:kots_corre
 
 The following four lemmas state that our construction satisfies the desired homomorphic properties and that it is unforgeable.
 \begin{lemma}\label{lem:kots_ind_correct}
-Let $\varepsilon, \alpha_w$, $\alpha_H$, $\varphi$, $\gamma$, $\rho$, $\beta_\sigma,n,q$ be positive integers, such that $n$ is a power of two, $q$ is prime.
+Let $\secpar, \varepsilon, \alpha_w$, $\alpha_H$, $\varphi$, $\gamma$, $\rho$, $\beta_\sigma,n,q$ be positive integers, such that $n$ is a power of two, $q$ is prime.
   Let $\ring_q$ be the polynomial ring $\ZZ_q[x]/\langle x^n+1\rangle$.
 Let $H : \bin^* \to \tern_{\alpha_H}$ be a hash function.
   Then the construction from \autoref{fig:otsconstruction} is a individually correct one time signature scheme.
 \end{lemma}
 \begin{proof}
-  Let $\secpar\in\NN$, $\params \gets \setup(\secparam)$, $(\osk,\opk) \gets \kgen(\params)$, $m\in\bin^*$ and $\vec{\sigma} \gets \sign(\params,\osk,m)$ be arbitrary.
+  Let $\params \gets \setup(\secparam)$, $(\osk,\opk) \gets \kgen(\params)$, $m\in\bin^*$ and $\vec{\sigma} \gets \sign(\params,\osk,m)$ be arbitrary.
   We first observe that the check on the \emph{value} of the signature goes through, as
   \begin{align*}
     \vec{a}^\intercal\vec{\sigma}
@@ -177,14 +177,14 @@ Let $H : \bin^* \to \tern_{\alpha_H}$ be a hash function.
 
 
 \begin{lemma}\label{lem:kots_correct}
-Let $\varepsilon, \alpha_w$, $\alpha_H$, $\varphi$, $\gamma$, $\rho$, $\beta_\sigma$, $n$, $q$ be positive integers, such that $\beta_\sigma \geq 4\varphi\alpha_H\sqrt{\tfrac{1}{2}\alpha_w\rho(\varepsilon+1+\log_2n\gamma)\cdot\ln2}$.
+Let $\secpar, \varepsilon, \alpha_w$, $\alpha_H$, $\varphi$, $\gamma$, $\rho$, $\beta_\sigma$, $n$, $q$ be positive integers, such that \[\beta_\sigma \geq 4\varphi\alpha_H\sqrt{\tfrac{1}{2}\alpha_w\rho(\varepsilon+1+\log_2n\gamma)\cdot\ln2}.\]
   Let $\ring_q$ be the polynomial ring $\ZZ_q[x]/\langle x^n+1\rangle$.
   Let $H : \bin^* \to \tern_{\alpha_H}$ be a hash function.
   Then the construction from \autoref{fig:otsconstruction} is a $(\rho,\tern_{\alpha_w},\varepsilon)$-probabilistically homomorphic one time signature scheme.
 \end{lemma}
 
 \begin{proof}
-  Let $\secpar\in\NN$, $\ell\in[\rho]$, $m\in\bin^*$, and $\params\gets\setup(\secparam)$ and for $i\in[\ell]$ let $\opk^i \in \ring_q^\opklen$ and $\vec{\sigma}^i \in \ring_q^\siglen$ be arbitrary such that for all $i\in[\ell]$, $\iverify(\params,\opk^i,m,\vec{\sigma}^i)=1$.
+  Let $\ell\in[\rho]$, $m\in\bin^*$, and $\params\gets\setup(\secparam)$ and for $i\in[\ell]$ let $\opk^i=(v_0,v_1) \in \ring_q^2$ and $\vec{\sigma}^i \in \ring_q^\gamma$ be arbitrary such that for all $i\in[\ell]$, $\iverify(\params,\opk^i,m,\vec{\sigma}^i)=1$.
   
   We first note that even for arbitrary $w_1,\dots,w_\ell \in \tern_\alpha$ it holds that
   \begin{align*}
@@ -206,7 +206,7 @@ Let $\varepsilon, \alpha_w$, $\alpha_H$, $\varphi$, $\gamma$, $\rho$, $\beta_\si
   To bound this probability we consider that the norm-bound is violated iff the absolute value of at least one of the $n\gamma$ coefficients in $\sum_{i=1}^{\ell} w^i\cdot\vec{\sigma}^i$ is greater than $\beta_\sigma$.
   By a union bound it is thus sufficient to show that each individual coefficient violates the bound with probability at most $2^{-\varepsilon}/(n\gamma)$
   
-  For each fresh individual $\vec{\sigma}^i$ it holds by the definition of $\iverify$ that
+  For each individual $\vec{\sigma}^i$ it holds by the definition of $\iverify$ that
     $\norm{\vec{\sigma}^i} \leq 2\varphi\alpha_H$
   Therefore, each coefficient is a sum of the form
   \(
@@ -222,23 +222,21 @@ Let $\varepsilon, \alpha_w$, $\alpha_H$, $\varphi$, $\gamma$, $\rho$, $\beta_\si
     ={}& 2\cdot\exp(-(\varepsilon+1+\log_2n\gamma)\cdot\ln2)\\
     ={}& 2^{-\varepsilon-\log_2n\gamma} = 2^{-\varepsilon}\cdot \frac{1}{n\gamma}
   \end{align*}
-  It thus follows that with probability at least $1-2^\varepsilon$ the strong verification algorithm outputs $1$.
+  It thus follows that with probability at least $1-2^\varepsilon$ the strong verification algorithm outputs $1$ as required.
 \end{proof}
 
-\nnote{TODO: continue from here}
 
 \begin{lemma}\label{lem:kots_homomorphic}
-Let $\alpha_H$, $\varphi$, $\gamma$, $\beta_\sigma,q,n,\secpar$ be positive integers.
-  Let $\ring_q=\ZZ_q[x]/\langle x^n+1\rangle$ be a polynomial ring.
-Let $H : \bin^* \to \tern_{\alpha_H}$ be a hash function.
+  Let $\secpar, \alpha_H$, $\varphi$, $\gamma$, $\beta_\sigma,q,n,\secpar$ be positive integers.
+  Let $\ring_q$ be the polynomial ring $\ZZ_q[x]/\langle x^n+1\rangle$.
+  Let $H : \bin^* \to \tern_{\alpha_H}$ be a hash function.
   Then the construction from \autoref{fig:otsconstruction} is a robustly homomorphic.
 \end{lemma}
 
 \begin{proof}
-  Let $\params\gets\setup(\secparam)$, $m\in\bin^*$, $\opk^0=(v^0_0,v^0_1),\opk^1=(v^1_0,v^1_1)\in \ring^2_q$, and $\vec{\sigma}^0,\vec{\sigma}^1 \in \ring_q^\gamma$ as specified in \autoref{def:malhomhots}.
-  To conclude that the scheme is robustly homomorphic we need to verify that both checks in the verification algorithm go through for $\beta'=2\beta_\sigma$.
+  Let $\params\gets\setup(\secparam)$, $m\in\bin^*$, $\opk^0=(v^0_0,v^0_1),\opk^1=(v^1_0,v^1_1)\in \ring^2_q$, and $\vec{\sigma}^0,\vec{\sigma}^1 \in \ring_q^\gamma$ be arbitrary such that $\sverify(\params,\opk^0,m,\vec{\sigma}^0)=1$ and $\sverify(\params,\opk^1,m,\vec{\sigma}^1)=1$.
   
-  Since both $\vec{\sigma}^0$ and $\vec{\sigma}^1$ verify \emph{strongly}, it holds that
+  By the definition of the strong verification algorithm, it holds that
   \begin{equation*}
      \norm{(\vec{\sigma}^0-\vec{\sigma}^1)}
     \leq \norm{\vec{\sigma}^0}+\norm{\vec{\sigma}^1}
@@ -264,13 +262,13 @@ Let $H : \bin^* \to \tern_{\alpha_H}$ be a hash function.
 
 \begin{proof}
   Let $\adv$ be an arbitrary adversary against the multi-user $W'$-existentially unforgeability under rerandomized keys with success probability $\nu(\secpar)$.
-  We construct an algorithm $\bdv$ that solves $(\ring,q,\gamma,2\beta_\sigma + 4\alpha_w\alpha_H\varphi)$-SIS as follows.
+  We construct an algorithm $\bdv$ that solves $\sis_{\ring,q,\gamma,2\beta_\sigma + 4\alpha_w\alpha_H\varphi}$ as follows.
   Given $\vec{a}\in\ring_q^\gamma$, $\bdv$ honestly chooses secret keys $(\vec{s}^i_0,\vec{s}^i_1) \in \ball_{\varphi}^\gamma\times \ball_{\varphi\alpha_H}^\gamma$ uniformly at random for $i\in[T-1]$ and invokes $\adv$ on public keys $(v^i_0,v^i_1)$, with $v^i_b := \vec{a}^\intercal\cdot s^i_b$.
   Whenever $\adv$ sends a signing query $(i,m)$, $\bdv$ will respond with the honestly computed signature $\vec{\sigma}:=\vec{s}^i_0\cdot H(m)+ \vec{s}^i_1$.
   Eventually $\adv$ outputs a candidate forgery $(i^*,m^*,\vec{\sigma}^*,w^*)$ and $\bdv$ will compute a signature on the same message as $\vec{\sigma}' := w^*\cdot\vec{s}^{i^*}_0\cdot H(m^*)+ w^*\cdot\vec{s}^{i^*}_1$.
   It then outputs $\vec{\sigma}^*-\vec{\sigma}'$.
   
-  To analyze the success probability of $\bdv$ suppose that $\adv$ output is a \emph{valid} forgery.
+  To analyze the success probability of $\bdv$ suppose that $\adv$ outputs a \emph{valid} forgery.
   I.e., at most a single query was asked for index $i^*$, said query was \emph{not} $m^*$, $w^*\in W'$ and $\wverify(\vec{a},(w^*v^{i^*}_0,w^*v^{i^*}_1),m^*,\allowbreak\vec{\sigma}^*)=1$.
   From this and the definition of $\vec{\sigma}'$ above it follows that
   \begin{align*}
@@ -281,11 +279,11 @@ Let $H : \bin^* \to \tern_{\alpha_H}$ be a hash function.
   \end{align*}
   as required for a solution to the SIS problem.
   
-  Next, to argue that $\norm{\vec{\sigma}^*-\vec{\sigma}'}\leq 2\beta_\sigma + 4\alpha_w\alpha_H\varphi$, note that the weak verification algorithm guarantees that $\norm{\sigma^*} \leq 2\beta_\sigma$.
-  Further, since $w^*\in W'$ there exist $w_0,w_1 \in \tern_\alpha$ such that $w^* = w_0-w_1$ and $\norm{w^*}_1 \leq \norm{w_0}_1 + \norm{w_1}_1 = 2\alpha_w$.
+  Next, to argue that $\norm{\vec{\sigma}^*-\vec{\sigma}'}\leq 2\beta_\sigma + 4\alpha_w\alpha_H\varphi$, note that the weak verification algorithm guarantees that $\norm{\vec{\sigma}^*} \leq 2\beta_\sigma$.
+  Further, since $w^*\in W'$ there exist $w_0,w_1 \in \tern_{\alpha_w}$ such that $w^* = w_0-w_1$ and $\norm{w^*}_1 \leq \norm{w_0}_1 + \norm{w_1}_1 = 2\alpha_w$.
   We can thus bound the norm of $\vec{\sigma}'$ as
   \begin{align*}
-    \norm{\sigma'} ={}& \norm{w^*\cdot\vec{s}^{i^*}_0\cdot H(m^*)+ w^*\cdot\vec{s}^{i^*}_1}\tag{Def. of $\sign$}\\
+    \norm{\vec{\sigma}'} ={}& \norm{w^*\cdot\vec{s}^{i^*}_0\cdot H(m^*)+ w^*\cdot\vec{s}^{i^*}_1}\tag{Def. of $\sign$}\\
     ={}&\norm{w^*\cdot\vec{s}^{i^*}_0\cdot H(m^*)}+ \norm{w^*\cdot\vec{s}^{i^*}_1}\tag{Triangle Inequality}\\
     ={}&\norm{w^*}_1\cdot\norm{H(m^*)}_1\cdot\norm{\vec{s}^{i^*}_0} + \norm{w^*}_1\cdot\norm{\vec{s}^{i^*}_1}\tag{\autoref{lem:ternbound}}\\
     ={}&4\alpha_w\alpha_H\varphi.\tag{$w^*\in W'$ and $H(m^*)\in\tern_{\alpha_H}$}
@@ -297,9 +295,9 @@ Let $H : \bin^* \to \tern_{\alpha_H}$ be a hash function.
   It thus suffices to bound the probability, that $\vec{\sigma}^*=\vec{\sigma}'$.
 
   To this end, we observe by \autoref{lem:keyhidden} that, since $\adv$ has learned at most a single signature under $(v_0^{i^*},v_1^{i^*})$, the corresponding $(\vec{s}_0^{i^*},\vec{s}_1^{i^*})$ remains information-theoretically hidden from $\adv$ among at least 2 possible secret keys.
-  Once $\adv$ outputs a valid forgery $(i^*,m^*,\sigma^*,w^*)$ the signing key used for the forgery becomes uniquely determined by \autoref{lem:nilssupportivechildsupport} as long as $H(m^*)\neq H(m)$ which is guaranteed with overwhelming probability by the collision resistance of $H$.
+  Once $\adv$ outputs a valid forgery $(i^*,m^*,\vec{\sigma}^*,w^*)$ the signing key used for the forgery becomes uniquely determined by \autoref{lem:nilssupportivechildsupport} as long as $H(m^*)\neq H(m)$ which is guaranteed with overwhelming probability by the collision resistance of $H$.
   It follows that $\sigma^* \neq \sigma'$ with probability at least $1/2 - \negl$.
-  Therefore, the success probability of our reduction $\bdv$ is $(1/2 - \negl) \nu$ and since the SIS problem is assumed to be hard, $\nu$ must therefore be negligible in $\secpar$.
+  Therefore, the success probability of our reduction $\bdv$ is $(1/2 - \negl) \nu(\secpar)$ and since the SIS problem is assumed to be hard, $\nu(\secpar)$ must therefore be negligible in $\secpar$.
   \qed
 \end{proof}
 
