--- a/extraref.bib
+++ b/extraref.bib
@@ -12,3 +12,63 @@
   year =         1989,
   doi =          "10.1017/CBO9781107359949.008",
 }
+
+@inproceedings{Shor94,
+  title={Algorithms for quantum computation: discrete logarithms and factoring},
+  author={Shor, Peter W},
+  booktitle={Proceedings 35th annual symposium on foundations of computer science},
+  pages={124--134},
+  year={1994},
+  organization={Ieee}
+}
+
+@article{NEC:ItaNak83,
+  title={A public-key cryptosystem suitable for digital multisignatures},
+  author={Itakura, Kazuharu and Nakamura, Katsuhiro},
+  journal={NEC Research \& Development},
+  number={71},
+  pages={1--8},
+  year={1983},
+  publisher = "NEC Creative",
+  address = "Tokyo"
+}
+
+@article{MaJia19,
+  author    = "Changshe Ma and 
+               Mei Jiang",
+  journal   = "IEEE Access", 
+  title     = "Practical Lattice-Based Multisignature Schemes for Blockchains", 
+  year      = 2019,
+  volume    = 7,
+  pages     = "179765--179778",
+  doi       = "10.1109/ACCESS.2019.2958816"
+}
+
+@inproceedings{PenDu20,
+  author    = "Chunyan Peng and
+               Xiujuan Du",
+  title     = "New Lattice-Based Digital Multi-signature Scheme",
+  booktitle = "6th International Conference of Pioneering Computer Scientists, Engineers and Educators",
+  year      = "2020",
+  month     = sep,
+  series    = "CCIS",
+  volume    = 1258,
+  publisher = springer,
+  pages     = "129--137",
+  isbn      = "978-981-15-7984-4",
+  doi       = "10.1007/978-981-15-7984-4_10",
+  address   = "Taiyuan, China"
+}
+
+@inproceedings{FukHas19,
+  author    = "Masayuki Fukumitsu and 
+               Shingo Hasegawa",
+  title     = "A Tightly-Secure Lattice-Based Multisignature",
+  year      = 2019,
+  isbn      = "978-145-03-6784-4",
+  publisher = acm,
+  address   = "Auckland, New Zealand",
+  doi       = "10.1145/3327958.3329542",
+  booktitle = "6th ASIA Public-Key Cryptography Workshop",
+  pages     = {3–11},
+}
