--- a/main.tex
+++ b/main.tex
@@ -50,16 +50,16 @@
 %% Load macros
 \input{commanddefs}
 
-\title{Chipmunk: Like Squirrel but Smaller\\ \small From Chunky Bois to Smol Bois}
+\title{News from Chipmunkistan}
 
 \author{
- 	Nils Fleischhacker\inst{1}\thanks{\texttt{mail@nilsfleischhacker.de}. Funded by the Deutsche Forschungsgemeinschaft (DFG, German Research Foundation) under Germany's Excellence Strategy - EXC 2092 CASA - 390781972.}\orcidID{0000-0002-2770-5444}
+ 	Nils Fleischhacker\inst{1}\thanks{\texttt{mail@nilsfleischhacker.de}. Funded by the Deutsche Forschungsgemeinschaft (DFG, German Research Foundation) under Germany's Excellence Strategy - EXC 2092 CASA - 390781972.}%\orcidID{0000-0002-2770-5444}
  	\and
- 	Gottfried Herold\inst{2}\thanks{\texttt{gottfried.herold@ethereum.org}}\orcidID{???}
+ 	Chipfried Herold\inst{2}\thanks{\texttt{gottfried.herold@ethereum.org}}%\orcidID{???}
  	\and
- 	Mark Simkin\inst{2}\thanks{\texttt{mark.simkin@ethereum.org}}\orcidID{0000-0002-7325-5261}
+ 	Munk Simkin\inst{2}\thanks{\texttt{mark.simkin@ethereum.org}}%\orcidID{0000-0002-7325-5261}
    \and
-   Zhenfei Zhang\inst{2}\thanks{\texttt{zhenfei.zhang@ethereum.org}}\orcidID{0000-0001-5131-5377}
+   Zhenfei Zhang\inst{2}\thanks{\texttt{zhenfei.zhang@ethereum.org}}%\orcidID{0000-0001-5131-5377}
 }
 \institute{
 	 Ruhr University Bochum
