--- a/commanddefs.tex
+++ b/commanddefs.tex
@@ -10,8 +10,27 @@
 \newcommand{\wverify}{\mathsf{wVrfy}}
 \newcommand{\sverify}{\mathsf{sVrfy}}
 \newcommand{\iverify}{\mathsf{iVrfy}}
+\newcommand{\averify}{\mathsf{aVrfy}}
 
 \newcommand{\params}{\mathsf{pp}}
+
+
+%Multi-Sig
+\newcommand{\msig}{\mathsf{MSIG}}
+\newcommand{\sk}{\mathsf{sk}}
+\newcommand{\pk}{\mathsf{pk}}
+\newcommand{\aggsig}{\sigma_\mathsf{agg}}
+\newcommand{\pubkeys}{\mathcal{P}}
+\newcommand{\signatures}{\mathcal{S}}
+\newcommand{\queries}{\mathcal{Q}}
+\newcommand{\osks}{\mathsf{OSS}}
+\newcommand{\opks}{\mathsf{OPK}}
+
+\newcommand{\IG}{\mathsf{IG}}
+\newcommand{\fork}{\mathsf{F}}
+
+\newcommand{\Hlist}{\mathcal{L}}
+\newcommand{\otsig}{\vec{\sigma}'}
 
 %OTS
 \newcommand{\hots}{\mathsf{KOTS}}
@@ -46,5 +65,6 @@
 
 \newcommand{\bagg}{\beta_{\mathsf{agg}}}
 
+\newcommand{\zip}{\mathsf{zip}}
 
 \newcommand{\nnote}[1]{{\color{red}[\textbf{Nils} #1 ]}}
