--- a/main.tex
+++ b/main.tex
@@ -20,6 +20,7 @@
 \usepackage{adjustbox}
 %\usepackage[most]{tcolorbox}
 \usepackage[adversary,sets,asymptotics,landau,lambda,operators,logic]{cryptocode}
+\usepackage{subcaption}
 \allowdisplaybreaks
 \makeatletter
 \let\claim\relax % undefine the environment
